--- a/main.html
+++ b/main.html
@@ -4,13 +4,44 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<div>List of all transactions</div>
+	<table class="table fw-bold font-monospace">
+	<thead class="table-dark">
+		<tr>
+			<th>#</th>
+			<th>From</th>
+			<th>To</th>
+			<th>Amount($)</th>
+		</tr>
+	</thead>
+	<tr>
+			<td>1</td>
+			<td>Mark</td>
+			<td>Otto</td>
+			<td>1000</td>
+		</tr>
+	<tr>
+			<td>2</td>
+			<td>Jacob</td>
+			<td>Thornton</td>
+			<td>1500</td>
+		</tr>
+	<tr>
+			<td>3</td>
+			<td>Jack</td>
+			<td>John</td>
+			<td>2000</td>
+		</tr>
+		<tr colspan="4" style="text-align: center">
+			<td>Total 4000</td>
+		</tr>
+</table>
 </body>
 
 </html>
