--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<div>List of all transactions</div>
+	<caption>List of all transactions</caption>
 	<table class="table fw-bold font-monospace">
 	<thead class="table-dark">
 		<tr>
@@ -38,9 +38,9 @@
 			<td>John</td>
 			<td>2000</td>
 		</tr>
-		<tr colspan="4" style="text-align: center">
-			<td>Total 4000</td>
-		</tr>
+		<tfoot class="table-light">
+			<td colspan="4">Total 4000</td>
+		</tfoot>
 </table>
 </body>
 
