--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<!-- the entire body must be written by student -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<caption>List of all transactions</caption>
-	<table class="table fw-bold font-monospace">
+	<table class="table fw-bold font-monospace table-responsive table-hover">
 	<thead class="table-dark">
 		<tr>
 			<th>#</th>
