--- a/main.html
+++ b/main.html
@@ -14,10 +14,10 @@
 	<table class="table fw-bold font-monospace table-responsive table-hover">
 	<thead class="table-dark">
 		<tr>
-			<th>#</th>
-			<th>From</th>
-			<th>To</th>
-			<th>Amount($)</th>
+			<th id="total">#</th>
+			<th id="total">From</th>
+			<th id="total">To</th>
+			<th id="total">Amount($)</th>
 		</tr>
 	</thead>
 	<tr>
