--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 			<th id="total">#</th>
 			<th id="total">From</th>
 			<th id="total">To</th>
-			<th id="total">Amount($)</th>
+			<th id="total" colspan="3">Amount($)</th>
 		</tr>
 	</thead>
 	<tr>
